Using new GC options (CMS)